<resources>
    <string name="app_name">wsang-admin</string>
    <string name="action_settings">Settings</string>

    <string name="accept">OK</string>

    <!-- Strings used for fragments for navigation -->
    <string name="competition_list_fragment_label">Competition list</string>
    <string name="competition_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Action names for action bar -->
    <string name="updating">Updating...</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="server_id">Server Id</string>
    <string name="server_address">Server Address</string>
    <string name="secure_key">Secure Key</string>
    <string name="terminal_string">Terminal Id</string>

    <!-- templates defaults -->
    <string name="competition_name">Name</string>
    <string name="competition_status">status</string>
    <string name="competition_id_title" translatable="false">Id: %d</string>
    <string name="competition_unknown_value">&lt;unknown&gt;</string>
    <string name="competition_name_null">Unknown (Id: %d)</string>
    <plurals name="competition_crews">
        <item quantity="other">Crews: %d</item>
    </plurals>

    <!-- fail fragment -->
    <string name="fail_title">Receive data fail by:</string>
    <string name="fail_reason_template">Unknown reason</string>
    <string name="fail_retry">Retry</string>

    <!-- competition list fragment -->
    <string name="competition_add">Start new competition</string>
    <string name="competition_manage_terminals">Manage terminals</string>

    <!-- terminals fragment -->
    <string name="terminals_add">Register new terminal</string>
    <string name="terminals_loading">Load terminal list…</string>
    <string name="terminals_loading_error">Error while terminal list load</string>
    <string name="terminal_list_is_empty">Server has no connected terminals</string>
    <string name="terminal_list_all_registered">All known terminals are registered</string>
    <string name="terminals_saving">Save terminal\'s settings…</string>
    <string name="terminals_saving_error">Error while terminal\'s settings save</string>
    <string name="terminals_saving_success">Terminal\'s settings successfully saved</string>
    <string name="terminal_remove_title">Terminal remove</string>
    <string name="terminal_remove_message">You want to remove \"%s\"?</string>
    <string name="gate_start">Start</string>
    <string name="gate_finish">Finish</string>

    <!-- competition fragment -->
    <string name="competition_name_default" translatable="false">Race #%1$d</string>
    <string name="competition_name_edit">Edit competition name</string>
    <string name="timestamp">Last change</string>
    <string name="gates_null">&lt;no gate&gt;</string>
    <string name="gates">Gates</string>
    <string name="penalties_null">&lt;no penalty&gt;</string>
    <string name="penalties">Penalties</string>
    <string name="crews_count">Crews count</string>
    <string name="crews_count_null">&lt;no registered&gt;</string>
    <string name="disciplines">Disciplines</string>
    <string name="disciplines_add_btn">Add discipline</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit_penalties">Edit penalties</string>
    <string name="edit_gates">Edit gates list</string>
    <string name="edit_list_hint" translatable="false">0, 1, 2, 3</string>
    <string name="edit_list_invalid_format">Invalid input format, must be: 0, 1, 2, 3</string>
    <string name="terminals">Terminals</string>
    <string name="competition_loading">Load competition…</string>
    <string name="competition_loading_error">Error while load competition</string>
    <string name="competition_saving">Save competition…</string>
    <string name="competition_saving_error">Error while save competition</string>
    <string name="competition_saving_success">Competition saved</string>
    <string name="competition_control">Control</string>
    <string name="competition_wipe">Wipe</string>
    <string name="competition_set_default">As Default</string>
    <string name="competition_wipe_dialog_title">Wipe competition</string>
    <string name="competition_wipe_dialog_message">You want remove all competition results?</string>
    <string name="competition_set_default_dialog_title">Set competition to default</string>
    <string name="competition_set_default_dialog_message">If you agree, all new terminals will connect to this competition</string>

    <!-- annoying dialog -->
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- discipline list -->
    <string name="discipline_name_null">&lt;unnamed&gt;</string>
    <string name="discipline_add">Add new</string>

    <!-- discipline name dialog -->
    <string name="discipline_name">Discipline name</string>
    <string name="set_discipline_name">Set discipline name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

</resources>